--- a/src/components/App.css
+++ b/src/components/App.css
@@ -11,3 +11,52 @@
     justify-content: center;
     height: 250px;
 }
+
+.list{
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    margin-right: 20px;
+    max-width: 98vw;
+    background: rgba(150, 150, 240, 0.3);
+    padding:  0 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+}
+
+.list_children{
+    display: flex;
+    flex-direction: row;
+    height: 50px;
+    align-items: center;
+    padding: 3px 0;
+}
+
+.list_children+.list_children{
+    border-top: 1px solid rgba(1, 1, 1, 0.5);
+}
+
+.list_text{
+    display: flex;
+    margin-left: 15px;
+    flex: 5;
+}
+
+.list_remove{
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    color: #FF0C0C;
+    transition-duration: 0.1s;
+    max-width: 100px;
+    cursor: pointer;
+    padding: 5px 0px;
+    margin-right: 10px;
+}
+
+.list_remove:hover{
+    border: 1px solid #FF0C0C;
+    border-radius: 10px;
+    background: #FF0C0C;
+    color: white;
+}
