--- a/src/components/App.css
+++ b/src/components/App.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 250px;
+    margin: 125px 0;
 }
 
 .list{
@@ -36,27 +36,57 @@
     border-top: 1px solid rgba(1, 1, 1, 0.5);
 }
 
-.list_text{
+.element_text{
     display: flex;
     margin-left: 15px;
     flex: 5;
 }
 
-.list_remove{
+.element_remove{
     display: flex;
     flex: 1;
     justify-content: center;
     color: #FF0C0C;
-    transition-duration: 0.1s;
+    transition-duration: 0.2s;
     max-width: 100px;
     cursor: pointer;
     padding: 5px 0px;
     margin-right: 10px;
 }
 
-.list_remove:hover{
-    border: 1px solid #FF0C0C;
+.element_remove:hover{
     border-radius: 10px;
     background: #FF0C0C;
     color: white;
+}
+
+.element_fulfilled{
+    width: 25px;
+    height: 25px;
+    font-size: 23px;
+    text-align: center;
+    line-height: 25px;
+    margin-right: 10px;
+    cursor: pointer;
+    color: green;
+    transition-duration: 0.2s;
+    border: 2px solid green;
+}
+
+.element_fulfilled:hover{
+    background: green;
+    color: white;
+}
+
+.element_fulfilled-active{
+    background: green;
+    color: white;
+    width: 25px;
+    height: 25px;
+    font-size: 23px;
+    text-align: center;
+    line-height: 25px;
+    margin-right: 10px;
+    cursor: pointer;
+    border: 2px solid green;
 }
