--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -1,18 +1,12 @@
-*
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Arial', monospace;
-
-
 header
-    background: rgba(150, 150, 240, 0.5);
-    box-shadow: 0px 1px 15px #000;
-    height: 50px;
+    background: rgba(150, 150, 240, 0.5)
+    box-shadow: 0px 1px 15px #000
+    height: 50px
 
 
 .logo_title
-    font-size: 38px;
-    text-align: center;
-    line-height: 50px;
-    font-style: italic;
-    text-shadow: 2.5px -1px 1px rgba(1,1,1, 0.5);
+    font-size: 38px
+    text-align: center
+    line-height: 50px
+    font-style: italic
+    text-shadow: 2.5px -1px 1px rgba(1,1,1, 0.5)
