--- a/src/components/Form/Button/Button.sass
+++ b/src/components/Form/Button/Button.sass
@@ -1,12 +1,6 @@
-*
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Arial', monospace;
-
-
 .form_button
-    width: 75px;
-    margin-left: 5px;
-    height: 38px; 
-    font-size: 21px;
-    cursor: pointer;
+    width: 75px
+    margin-left: 5px
+    height: 38px
+    font-size: 21px
+    cursor: pointer
