--- a/src/view/components/RemoveButton/RemoveButton.sass
+++ b/src/view/components/RemoveButton/RemoveButton.sass
@@ -5,6 +5,8 @@
     color: #FF0C0C
     max-width: 100px
     padding: 5px 0
+    border: 1px solid red
+    border-radius: 5px
 
     &:hover
       border-radius: 10px
