--- a/src/view/components/СheckmarkButton/СheckmarkButton.sass
+++ b/src/view/components/СheckmarkButton/СheckmarkButton.sass
@@ -22,3 +22,9 @@
     margin-right: 10px
     cursor: pointer
     border: 2px solid green
+
+
+.checkMark
+  width: 25px
+  padding-top: 1px
+  text-align: center
