--- a/src/view/widgets/Form/Form.sass
+++ b/src/view/widgets/Form/Form.sass
@@ -4,3 +4,13 @@
   justify-content: center
   margin: 125px 0
 
+
+.buttonAdd
+  color: #FF0C0C
+
+.form_button
+  width: 75px
+  margin-left: 5px
+  height: 38px
+  font-size: 21px
+  cursor: pointer
