--- a/src/view/templates/Task/Task.sass
+++ b/src/view/templates/Task/Task.sass
@@ -4,9 +4,16 @@
   cursor: pointer
   transition-duration: 0.3s
   transition-timing-function: ease-out
-  &_text
-      flex: 5
-      flex-wrap: wrap
+
+
+.task_text
+  flex: 5
+  flex-wrap: wrap
+  display: flex
+  margin: 0 10px
+  cursor: pointer
+  transition-duration: 0.3s
+  transition-timing-function: ease-out
 
 
 .element
