--- a/src/html-templates/index.hbs
+++ b/src/html-templates/index.hbs
@@ -5,13 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>todo list</title>
+    <title>{{htmlWebpackPlugin.options.title}}</title>
 
-        <link rel="stylesheet" href="/public/assets/css/main.css?05219b1cba7504bc1cb7" >
+    {{#each htmlWebpackPlugin.files.css}}
+        <link rel="stylesheet" href="{{this}}" >
+    {{/each}}
 </head>
 <body>
 <div id="root"></div>
 
-    <script src="/public/main.js?05219b1cba7504bc1cb7" ></script>
+{{#each htmlWebpackPlugin.files.js}}
+    <script src="{{this}}" ></script>
+{{/each}}
 </body>
 </html>
