--- a/src/view/widgets/Tasks/Tasks.sass
+++ b/src/view/widgets/Tasks/Tasks.sass
@@ -34,4 +34,25 @@
   transition-duration: 0.3s
   transition-timing-function: ease-out
 
+.form_button
+  width: 75px
+  margin-left: 5px
+  height: 38px
+  font-size: 21px
+  cursor: pointer
 
+
+.tasks
+  &_addForm
+    display: flex
+    flex-direction: row
+    justify-content: center
+    margin: 125px 0
+  &_list
+    display: flex
+    flex-direction: column
+    margin: 0 20px 20px 20px
+    max-width: 98vw
+    background: rgba(150, 150, 240, 0.3)
+    padding:  0 10px
+    border-radius: 5px
